--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jose's Portfolio
-name:
+name: Jose's Portfolio
 null.logo: <img src="mugshot.jpeg" alt="My Photo" Width="200px">
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
