--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Jose's Portfolio
-name: Jose's Portfolio
+title: José's Portfolio
+name: José's Portfolio
 null.logo: <img src="mugshot.jpeg" alt="My Photo" Width="200px">
 remote_theme: pages-themes/merlot@v0.2.0
 plugins:
